--- a/client/src/styling/followinglist.css
+++ b/client/src/styling/followinglist.css
@@ -97,24 +97,21 @@
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid #fc4c02;
+  flex-shrink: 0;
 }
 
 /* Following info */
 .following-info {
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 .following-username {
-  margin: 0 0 0.25rem 0;
+  margin: 0;
   font-size: 1rem;
   font-weight: bold;
   color: #333;
-}
-
-.following-email {
-  margin: 0;
-  font-size: 0.9rem;
-  color: #666;
 }
 
 /* Loading and error states */
