Added elapsed_time to Activity model in models.py and migrated, added state management elapsedHours and elapsedMinutes and duration input section to the form, added styling to activityform.css for duration input

--- a/client/src/styling/userstats.css
+++ b/client/src/styling/userstats.css
@@ -56,8 +56,11 @@
 
 /* touch Target Sizing for Mobile */
 @media (max-width: 768px) {
-    button, a, input, select {
-      min-height: 44px; /* Apple's recommended touch target size */
-      min-width: 44px;
-    }
+  button,
+  a,
+  input,
+  select {
+    min-height: 44px; /* Apple's recommended touch target size */
+    min-width: 44px;
   }
+}
