--- a/client/src/styling/userstats.css
+++ b/client/src/styling/userstats.css
@@ -97,6 +97,16 @@
   object-fit: contain;
 }
 
+/* Pie chart container */
+.pie-chart-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Activity Calendar Styling */
 .activity-calendar {
   width: 100%;
